@@ -1,7 +1,8 @@
 package com.harmonycloud.bean;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
 
 public abstract class CoderBean {
 
@@ -9,13 +10,13 @@ public abstract class CoderBean {
      * BASE64解密
      */
     public static byte[] decryptBASE64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return (Base64.getDecoder()).decode(key);
     }
 
     /**
      * BASE64加密
      */
     public static String encryptBASE64(byte[] key) throws Exception {
-        return (new BASE64Encoder()).encodeBuffer(key);
+        return (Base64.getEncoder()).encodeToString(key);
     }
 }
